bundle/tests/scorecard/kind-kuttl/ingress/00-ingress.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: ingress
spec:
  # Add fields here
  applicationImage: registry.k8s.io/pause:3.2
  replicas: 1
  expose: true
  route:
    host: myapp.mycompany.com
    path: "/"
    pathType: Prefix
