bundle/tests/scorecard/kind-kuttl/ingress/01-default-pathtype.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: ingress
spec:
  # Add fields here
  route:
    host: myapp.mycompany.com
    path: "/"
    pathType:
