bundle/tests/scorecard/kind-kuttl/ingress/02-delete-ingress.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: ingress
spec:
  # Add fields here
  applicationImage: k8s.gcr.io/pause:3.2
  replicas: 1
  expose: false
