bundle/tests/scorecard/kind-kuttl/ingress/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: myapp.mycompany.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
